Added a viewmapper